--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
 <a href="/01-chatty-events.html">Пример debonce,throttle</a>
 <a href="/filter.html">Пример фильтрации поиска</a>
+<a href="/leazy.html">Lazy</a>
+<a href="/lazysizes.html">lazysizes</a>
 </body>
 </html>
