--- a/lazysizes.html
+++ b/lazysizes.html
@@ -8,6 +8,7 @@
   <title>leazy load img</title>
 </head>
 <body>
+  <a href="/index.html">Главная</a>
   <ul class="car container">
     <li class="car__item">
       <img 
