--- a/leazy.html
+++ b/leazy.html
@@ -8,6 +8,7 @@
   <title>Document</title>
 </head>
 <body>
+  <a href="/index.html">Главная</a>
   <ul class="car container">
     <li class="car__item">
       <img loading ="lazy" src="/img/car-1.jpg" width="900" height="480" alt="car">
