--- a/01-chatty-events.html
+++ b/01-chatty-events.html
@@ -7,6 +7,7 @@
   <title>Document</title>
 </head>
 <body>
+  <a href="/index.html">Главная</a>
   <p class="js-coords">Кол-во вызовов onMouseMove: 0</p>
 
   <input type="text" class="js-input">
